Add build and run scripts for easier project setup
Co-authored-by: fidelisfelipe <925754+fidelisfelipe@users.noreply.github.com>